# h0014

./: jd_preset.json  pyproject.toml  report.csv
picflow/: __init__.py  cli.py  hasher.py  manifest.py  presets.py  processor.py
test_done/: manifest.json  report_w1.csv
